--- a/Dom/index.css
+++ b/Dom/index.css
@@ -6,7 +6,19 @@
 }
 
 #container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    /* display: flex; */
+    /* flex-wrap: wrap;
+    justify-content: space-around; */
+}
+
+ul {
+    padding: 10px;
+    width: 300px;
+    display: inline-block;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+li {
+    font-size: 20px;
 }
