--- a/Firebase/index.css
+++ b/Firebase/index.css
@@ -53,3 +53,9 @@ img {
   font-size: 20px;
   margin: 20px auto;
 }
+.blog_card{
+  border: 1px solid #ccc;
+  box-shadow: 0.5px 0.5px 0 #ccc;
+  margin-top: 10px;
+  padding: 6px;
+}
